--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "maywzp",
   "license": "ISC",
   "dependencies": {
+    "alloyfinger": "^0.1.3",
     "babel-polyfill": "*",
     "mint-ui": "^2.0.5",
     "moment": "^2.15.1",
     "vue": "^2.0.0-rc",
+    "vue-finger": "^0.1.0",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0"
   },
@@ -37,6 +39,7 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.9.0",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "postcss": "^5.1.0",
     "postcss-loader": "^0.11.1",
